# abstract_games

./: .gitignore  CLAUDE.md  COMPETITIVE_AUDIT.md  COVERAGE.md  DEPLOY.md  GAMES_QUEUE.md  GAME_BACKLOG.md  GAME_STATUS.md  KNOWN_ISSUES.md  PLATFORM_PLAN.md  README.md  build.sh  dev.sh  index.html  oust.jsx  package-lock.json  render.yaml  vite.config.js  yodd.jsx
engine/: FREEFORM_MODE.md  README.md  SPEC.md  pyproject.toml
engine/agp/: __init__.py  chesslike.py  cli.py  conformance.py  freeform.py  game.py  loader.py  mcts.py  render_ascii.py  shogilike.py  types.py
engine/games/abalone/: game.py  manifest.json  rules.md  selftest.py
engine/games/accasta/: game.py  manifest.json  rules.md  selftest.py
engine/games/achi/: game.py  manifest.json  rules.md  selftest.py
engine/games/agon/: game.py  manifest.json  rules.md  selftest.py
engine/games/akimbo/: game.py  manifest.json  rules.md  selftest.py
engine/games/akron/: game.py  manifest.json  rules.md  selftest.py
engine/games/alice_chess/: game.py  manifest.json  rules.md  selftest.py
engine/games/almost_chess/: game.py  manifest.json  rules.md  selftest.py
engine/games/alquerque/: game.py  manifest.json  rules.md  selftest.py
engine/games/alveole/: game.py  manifest.json  rules.md  selftest.py
engine/games/amazons/: game.py  manifest.json  rules.md
engine/games/anchor/: game.py  manifest.json  rules.md  selftest.py
engine/games/andernach_chess/: game.py  manifest.json  rules.md  selftest.py
engine/games/antichess/: game.py  (+3 more)
engine/tests/: test_games.py
engine/tools/: gen_game_status.py
(+1452 files in other folders)
